--- a/clash/more/more.yaml
+++ b/clash/more/more.yaml
@@ -5,3 +5,7 @@ payload:
   - DOMAIN-SUFFIX,viggle.ai
   - DOMAIN-SUFFIX,chaturbate.com
   - DOMAIN-SUFFIX,yandex.com
+  - DOMAIN-SUFFIX,github.com
+  - DOMAIN-SUFFIX,vercel.com
+  - DOMAIN-SUFFIX,grok.com
+  - DOMAIN-SUFFIX,x.com
