feat: 添加21tb.com的通配符域名和多个关键字到配置文件

--- a/clash/more/more.yaml
+++ b/clash/more/more.yaml
@@ -11,3 +11,6 @@ payload:
   - DOMAIN-SUFFIX,x.com
   - DOMAIN-SUFFIX,vercel.app
   - DOMAIN-SUFFIX,google.com
+  - DOMAIN-KEYWORD,google
+  - DOMAIN-KEYWORD,github
+  - DOMAIN-KEYWORD,vercel
