feat: 添加ohmyposh.dev、warp.dev和cloudflare到域名配置文件

--- a/clash/more/more_No_Resolve.yaml
+++ b/clash/more/more_No_Resolve.yaml
@@ -14,3 +14,7 @@ payload:
   - DOMAIN-KEYWORD,google
   - DOMAIN-KEYWORD,github
   - DOMAIN-KEYWORD,vercel
+  - DOMAIN-SUFFIX,ohmyposh.dev
+  - DOMAIN-SUFFIX,warp.dev
+  - DOMAIN-KEYWORD,cloudflare
+
