--- a/clash/ai/ai.yaml
+++ b/clash/ai/ai.yaml
@@ -6,3 +6,5 @@ payload:
   - DOMAIN-KEYWORD,gemini
   - DOMAIN-SUFFIX,grok.com
   - DOMAIN-KEYWORD,grok
+  - DOMAIN-SUFFIX,oaistatic.com
+  - DOMAIN-SUFFIX,chatgpt.com
