feat: 添加sxzz.moe到域名配置文件

--- a/clash/more/more.yaml
+++ b/clash/more/more.yaml
@@ -58,3 +58,4 @@ payload:
   - DOMAIN-SUFFIX,githubusercontent.com
   - DOMAIN-SUFFIX,gitlab.com
   - DOMAIN-SUFFIX,bitbucket.org
+  - DOMAIN-SUFFIX,sxzz.moe
