--- a/clash/more/more_No_Resolve.yaml
+++ b/clash/more/more_No_Resolve.yaml
@@ -58,4 +58,5 @@ payload:
   - DOMAIN-SUFFIX,githubusercontent.com
   - DOMAIN-SUFFIX,gitlab.com
   - DOMAIN-SUFFIX,bitbucket.org
+  - DOMAIN-SUFFIX,sxzz.moe
 
